# Project-Mozart

./: .gitignore  README.md  jetson_deploy_prompt.txt  jetson_remaining_tasks.txt  rvc_post_bridge.py
IO/: CMakeLists.txt  README.md
IO/include/mozart/: audio_io.h  audio_stream.hpp  frame_meta.h  mock_stream.hpp  pipewire_stream.hpp  ring_buffer.hpp  udp_stream.hpp
IO/src/: audio_stream.cpp  mock_stream.cpp  pipewire_stream.cpp  ring_buffer.cpp  udp_stream.cpp
IO/tests/: CMakeLists.txt  test_mock_stream.cpp  test_ring_buffer.cpp
RVC_structure/: README.md
RVC_structure/docs/: FRONTEND_TASK.md  PORT_TABLE.md  interface_contract.md  protocol_spec.md
RVC_structure/include/api/: http_api.hpp
RVC_structure/include/rvc/: model_loader.hpp  pipeline.hpp
RVC_structure/src/: main.cpp
RVC_structure/src/api/: http_api.cpp
ai_voice_changer/: .gitignore  CMakeLists.txt  README.md  config.toml
ai_voice_changer/docs/: contract_spec.md  onnx_export_guide.md
ai_voice_changer/include/: frame_meta.hpp  mozart_post.h
ai_voice_changer/include/contract/: contract_source.hpp  mock_source.hpp  mozart_ring_source.hpp
ai_voice_changer/include/inference/: infer_engine.hpp  onnx_engine.hpp
ai_voice_changer/include/output/: dummy_sink.hpp  output_sink.hpp  pipewire_sink.hpp
ai_voice_changer/include/rvc/: generator.hpp  hubert_extractor.hpp  model_loader.hpp  rmvpe_f0.hpp  rvc_pipeline.hpp
ai_voice_changer/include/server/: http_server.hpp
ai_voice_changer/include/utils/: config.hpp  logging.hpp
ai_voice_changer/src/: main.cpp
ai_voice_changer/src/contract/: mock_source.cpp  mozart_ring_source.cpp
ai_voice_changer/src/inference/: onnx_engine.cpp
ai_voice_changer/src/output/: dummy_sink.cpp  pipewire_sink.cpp
ai_voice_changer/src/rvc/: generator.cpp  hubert_extractor.cpp  model_loader.cpp  rmvpe_f0.cpp  rvc_pipeline.cpp
ai_voice_changer/src/server/: http_server.cpp
ai_voice_changer/src/utils/: config.cpp  logging.cpp
ai_voice_changer/tests/: frame_meta_test.cpp  mock_pipeline_test.cpp  onnx_smoke_test.cpp
ai_voice_changer_kimi/include/network/: packet.hpp
ai_voice_changer_kimi/include/rvc/: feature_extractor.hpp
ai_voice_changer_kimi/include/utils/: config.hpp  config.hpp.bak
ai_voice_changer_kimi/src/network/: udp_server.cpp
ai_voice_changer_kimi/src/rvc/: feature_extractor.cpp
ai_voice_changer_kimi/src/utils/: config.cpp
backend-legacy/: CMakeLists.txt.bak  README.md
backend-legacy/include/rvc/: feature_extractor.hpp.bak  inferencer.hpp
backend-legacy/src/rvc/: model_loader.cpp  pipeline.cpp
backend-legacy/tests/: test_packet.cpp
docs/: ARCHITECTURE.md  CXX_IMPL_PLAN.md  FPGA_ROADMAP.md  HARDWARE_REFERENCE.md  JETSON_DEPLOY.md  LOCAL_RVC_SETUP.md  ONNX_EXPORT_GUIDE.md  PREPROCESSING.md  RVC_BACKEND.md  preprocessing-design-fpga.md  preprocessing-design.md
frontend/: index.html
mozart_unified/: CMakeLists.txt  README.md  config.toml
mozart_unified/include/mozart/core/: contract_packet.hpp  frame_meta.hpp
mozart_unified/include/mozart/output/: dummy_sink.hpp  pipewire_sink.hpp  sink_base.hpp  udp_sink.hpp
mozart_unified/include/mozart/rvc/: generator.hpp  hubert_extractor.hpp  infer_engine.hpp  model_loader.hpp  rmvpe_f0.hpp  rvc_pipeline.hpp
mozart_unified/include/mozart/server/: http_server.hpp
mozart_unified/include/mozart/source/: mock_source.hpp  ring_source.hpp  source_base.hpp  udp_source.hpp
mozart_unified/include/mozart/utils/: config.hpp  logging.hpp
mozart_unified/src/: main.cpp
mozart_unified/src/core/: contract_packet.cpp  frame_meta.cpp
mozart_unified/src/output/: dummy_sink.cpp  pipewire_sink.cpp  udp_sink.cpp
mozart_unified/src/rvc/: generator.cpp  hubert_extractor.cpp  model_loader.cpp  onnx_engine.cpp  rmvpe_f0.cpp  rvc_pipeline.cpp
mozart_unified/src/server/: http_server.cpp
mozart_unified/src/source/: mock_source.cpp  ring_source.cpp  udp_source.cpp
mozart_unified/src/utils/: config.cpp  logging.cpp
mozart_unified/tests/: test_contract_packet.cpp  test_frame_meta.cpp  test_mock_pipeline.cpp  test_udp_loopback.cpp
pre/: ARCHITECTURE.md  CMakeLists.txt  Makefile  mozart.h
pre/include/mozart/: pipeline.h
pre/native/rnnoise/src/: config.h
pre/src/: main.c  pipeline.c  pipewire.c  pre.c  rnnoise.c  stage.c
pre/tests/: test_stage.c
preprocessor/: CMakeLists.txt  Makefile  README.md  mozart.h
preprocessor/include/mozart/: pipewire.h  rnnoise.h  stage.h
preprocessor/src/: pipeline.c  pre.c  rnnoise.c  stage.c
preprocessor/tests/: test_stage.c
ref/: ZYNQ_BTB_Hardware_Answers.md
ref/EBF_ZYNQ70xx_BTB_CORE/: EBF410020_Pin_Delay_20230724_野火Xilinx ZYNQ70107020核心板.xls
ref/EBF_ZYNQ70xx_BTB_CORE/机械结构文件/: EBF410020_DXF_20240131_BOT.dxf  EBF410020_DXF_20240131_TOP.dxf
ref/EBF_ZYNQ70xx_BTB_Plate/机械结构文件/: EBF410021_DXF_20240131_BOT.dxf
reference/EBF_ZYNQ70xx_BTB_Plate/机械结构文件/: EBF410021_DXF_20240131_TOP.dxf
rvc-backend/: CMakeLists.txt  README.md  config.yaml
rvc-backend/include/: common.hpp
rvc-backend/include/api/: http_api.hpp
rvc-backend/include/network/: packet.hpp  udp_server.hpp
rvc-backend/include/rvc/: audio_worker.hpp  feature_extractor.hpp  index_search.hpp  inferencer.hpp  model_loader.hpp  onnx_engine.hpp  pipeline.hpp
rvc-backend/include/utils/: config.hpp
rvc-backend/src/: main.cpp
rvc-backend/src/api/: http_api.cpp
rvc-backend/src/network/: packet.cpp
rvc-backend/src/rvc/: audio_worker.cpp  feature_extractor.cpp  index_search.cpp  inferencer.cpp  model_loader.cpp  onnx_engine.cpp  pipeline.cpp
rvc-backend/src/utils/: config.cpp
rvc-backend/tests/: test_feature_extractor.cpp  test_inferencer.cpp  test_udp_loopback.cpp
state_manager/: README.md  architecture.html  state_machine_design.md
tools/: export_generator_onnx.py  export_hubert_onnx.py  export_rmvpe_onnx.py
